--- a/todo-app/views/index.ejs
+++ b/todo-app/views/index.ejs
@@ -6,20 +6,20 @@
 	</title>
 	<link href="https://fonts.googleapis.com/css?family=Lato:100" rel="stylesheet">
 </head>
-<body>
+<body bgcolor="yellow">
 <center>
 	<div class="container">
-		<h2>Todo list</h2>
-		<div style="float: right;">
+		<h2>Todo list</h2><br>
+		<div style="margin-left: 400px">
 			
 			<form action="/search" method="GET">
-				<input type="text" name="search">
+				<input type="text" name="search" placeholder="Search..">
 				<input type="submit" value="Search">
 			</form>
 		</div>
 		<br><br><br>
 		<form action="/addtask" method="POST">
-			<input type="text" name="addtask" placeholder="add a new task">
+			<input type="text" name="addtask" placeholder="Add a new task"><br><br>
 			<button>Add task</button>&nbsp&nbsp
 			<button formaction="/removetask" type="submit"> RemoveAll </button>
 		</form>
