--- a/todo-app/views/index.ejs
+++ b/todo-app/views/index.ejs
@@ -6,18 +6,11 @@
 	</title>
 	<link href="https://fonts.googleapis.com/css?family=Lato:100" rel="stylesheet">
 </head>
-<body bgcolor="yellow">
+<body>
 <center>
-	<div class="container">
+	<div class="list">
 		<h2>Todo list</h2><br>
-		<div style="margin-left: 400px">
-			
-			<form action="/search" method="GET">
-				<input type="text" name="search" placeholder="Search..">
-				<input type="submit" value="Search">
-			</form>
-		</div>
-		<br><br><br>
+
 		<form action="/addtask" method="POST">
 			<input type="text" name="addtask" placeholder="Add a new task"><br><br>
 			<button>Add task</button>&nbsp&nbsp
@@ -25,14 +18,14 @@
 		</form>
 	</div>
 
-	<ul>
-	<% if (task.length >0) { %>
-		<% for (var i=0; i<task.length; i++) { %>
-			<span><%= task[i] %> </span>&nbsp&nbsp <a href="/remove/<%= task[i] %>">Remove</a><br>
+	<ol>
+		<% if (list.length >0) { %>
+			<% for (var i=0; i<list.length; i++) { %>
+					<li><span><%= list[i].title%> </span>&nbsp&nbsp <a href="/remove/<%= list[i].id %>">Remove</a><br></li>
+			<% } %>
 		<% } %>
-	<% } %>
 
-	</ul>
+	</0l>
 </center>
 </body>
 </html>
